// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FoodItem > calculates position correctly for different indices 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; left: 0%; top: -8.5vw; width: 16.200000000000003vw; height: 12vw; transform: translate(-50%, -50%); opacity: 1; display: flex; justify-content: center; align-items: flex-end;"
  >
    <div
      data-testid="food-animation-banana"
      style="width: 16.2vw; height: 12vw; animation: 2s foodAppearing; animation-delay: 0s; animation-fill-mode: both;"
    >
      Video for banana (Idle)
    </div>
  </div>
</DocumentFragment>
`;

exports[`FoodItem > calculates position correctly for different indices 2`] = `
<DocumentFragment>
  <div
    style="position: absolute; left: 100%; top: -8.5vw; width: 16.200000000000003vw; height: 12vw; transform: translate(-50%, -50%); opacity: 1; display: flex; justify-content: center; align-items: flex-end;"
  >
    <div
      data-testid="food-animation-banana"
      style="width: 16.2vw; height: 12vw; animation: 2s foodAppearing; animation-delay: 0.8s; animation-fill-mode: both;"
    >
      Video for banana (Idle)
    </div>
  </div>
</DocumentFragment>
`;

exports[`FoodItem > renders correctly in overview mode 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; left: 50%; top: -11.5vw; width: 16.200000000000003vw; height: 12vw; transform: translate(-50%, -50%); opacity: 1; display: flex; justify-content: center; align-items: flex-end;"
  >
    <div
      data-testid="food-animation-banana"
      style="width: 16.2vw; height: 12vw; animation: 2s foodAppearing; animation-delay: 0.4s; animation-fill-mode: both;"
    >
      Video for banana (Idle)
    </div>
  </div>
</DocumentFragment>
`;

exports[`FoodItem > renders correctly when zoomed in (active speaker) 1`] = `
<DocumentFragment>
  <div
    style="position: relative; width: 55vh; height: 55vh; display: flex; justify-content: center; align-items: flex-end; top: -20vh;"
  >
    <div
      data-testid="food-animation-banana"
      style="width: 74.25vh; height: 55vh; animation: 2s foodAppearing; animation-delay: 0.4s; animation-fill-mode: both;"
    >
      Video for banana (Breathing)
    </div>
  </div>
</DocumentFragment>
`;

exports[`FoodItem > renders correctly when zoomed in (inactive speaker) 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; left: 50%; top: -11.5vw; width: 16.200000000000003vw; height: 12vw; transform: translate(-50%, -50%); opacity: 0; display: flex; justify-content: center; align-items: flex-end;"
  >
    <div
      data-testid="food-animation-banana"
      style="width: 16.2vw; height: 12vw; animation: 2s foodAppearing; animation-delay: 0.4s; animation-fill-mode: both;"
    >
      Video for banana (Idle)
    </div>
  </div>
</DocumentFragment>
`;

exports[`FoodItem > should apply special positioning for lollipop 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; left: 50%; top: -12.075000000000001vw; width: 16.200000000000003vw; height: 12vw; transform: translate(-50%, -50%); opacity: 1; display: flex; justify-content: center; align-items: flex-end;"
  >
    <div
      data-testid="food-animation-lollipop"
      style="width: 16.2vw; height: 12vw; animation: 2s foodAppearing; animation-delay: 0.4s; animation-fill-mode: both;"
    >
      Video for lollipop (Idle)
    </div>
  </div>
</DocumentFragment>
`;

exports[`FoodItem > should handle food with missing id gracefully 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; left: 50%; top: -11.5vw; width: 16.200000000000003vw; height: 12vw; transform: translate(-50%, -50%); opacity: 1; display: flex; justify-content: center; align-items: flex-end;"
  >
    <div
      data-testid="food-animation-undefined"
      style="width: 16.2vw; height: 12vw; animation: 2s foodAppearing; animation-delay: 0.4s; animation-fill-mode: both;"
    >
      Video for  (Idle)
    </div>
  </div>
</DocumentFragment>
`;
